# Avica

./: build.gradle  ext.gradle  gradle.properties  local.properties
app/: build.gradle  google-services.json
app/src/androidTest/java/com/optimum/Avica/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: com_vivalnk_sdk_vSDK_demo01a_android.pem  com_vivalnk_sdk_vSDK_demo_android.pem  license-VivaLNK_SDKTest-vivalink  license-vivalink-test
app/src/main/java/com/example/myapplication/AvicaPatient/: Avica.java
app/src/main/java/com/optimum/Avica/: Avica.java
app/src/main/res/drawable/: back_btn.xml  bp.xml  calendar.xml  ecg_bg.xml  et_bg_new.xml  eye.xml  grey_stoke.xml  heart.xml  ic_delete.xml  ic_download.xml  ic_pdf.xml  jpg_icon.xml  message_icon.xml  pef.xml  phr_1.xml  phr_2.xml  phr_3.xml  phr_4.xml  phr_5.xml  phr_6.xml  resp.xml  skin.xml  steps.xml  temp.xml
app/src/main/res/layout/: activity_add_diagnosis.xml  activity_add_family_history.xml  activity_add_medication.xml  activity_add_present_complain.xml  activity_add_record.xml  activity_add_surgical_procedure.xml  activity_automatic.xml  activity_bg_automatic.xml  activity_bg_manual.xml  activity_blood_glucose.xml  activity_blood_pressure.xml  activity_bp_automatic.xml  activity_bp_manual.xml  activity_bp_watch_tutorial.xml  activity_chat.xml  activity_compliance.xml  activity_config.xml  activity_custom_ecg_view.xml  activity_dashboard.xml  activity_device_detail.xml  activity_doc_bg.xml  activity_doc_bp.xml  activity_doc_ecg.xml  activity_ecg.xml  activity_ecg_automatic.xml  activity_ecg_manual.xml  activity_education.xml  activity_forget_password.xml  activity_history.xml  activity_join_meeting.xml  activity_login.xml  activity_main.xml  activity_manual.xml  activity_measurments.xml  activity_medication.xml  activity_new_appointment.xml  activity_notification.xml  activity_ota.xml  activity_patientlist.xml  activity_pin.xml  (+35 more)
app/src/main/res/menu/: dmenu.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: arrays.xml  strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/optimum/Avica/: ExampleUnitTest.java
base/: build.gradle
base/schemas/com.vivalnk.sdk.demo.repository.database.room.VitalDatabase/: 2.json
base/src/main/: AndroidManifest.xml
base/src/main/cpp/: CMakeLists.txt
base/src/main/cpp/facade/: com_vivalnk_sdk_demo_core_WfdbUtils.cpp  com_vivalnk_sdk_demo_core_WfdbUtils.h
base/src/main/cpp/include/: LogUtils.h  wfdb_lib.hpp
base/src/main/cpp/source/wfdb/: annot.c  signal.c  wfdb_lib.cpp  wfdbio.c
base/src/main/res/layout/: item_file.xml  layout_testitem.xml
base/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  strings_filepicker.xml  strings_iconfont.xml  styles.xml  styles_iconfont.xml
base/src/main/res/values-zh/: strings.xml
buildSrc/: build.gradle.kts
buildscript/: artifact-javadoc-handler.gradle  artifact-pom-manager.gradle  build.gradle  dependencies.gradle  release.gradle.kts  utils.gradle
gradle/wrapper/: gradle-wrapper.properties
(+380 files in other folders)
